@@ -1,11 +1,9 @@
-
 /**
  ******************  Script Configuration ******************
  */
 buildscript {
     repositories {
         jcenter()
-        gradlePluginPortal()
 
         maven {
             url "https://sandec.bintray.com/repo"
@@ -14,8 +12,6 @@ buildscript {
 
     dependencies {
         classpath 'com.sandec.jpro:jpro-plugin-gradle:2019.2.4'
-        classpath 'org.openjfx:javafx-plugin:0.0.8'
-        classpath 'se.transmode.gradle:gradle-docker:1.1'
     }
 }
 
@@ -25,34 +21,49 @@ buildscript {
  */
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'org.openjfx.javafxplugin'
-
-apply plugin: 'docker'
-
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.maze.mazeFX.View.MazeFX'
-    }
-}
+apply plugin: 'com.google.osdetector'
 
 compileJava {
     sourceCompatibility = 11
     targetCompatibility = 11
 }
 
-
-
-
 repositories {
     jcenter()
 }
 
-javafx {
-    version = '11.0.2'
-    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml', 'javafx.media', 'javafx.web' ]
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
+
+dependencies {  //Dependency blocks outside the ‘buildscript { }’ block are project dependencies, that is, they are added to your project code’s classpath.
+    // Add your dependencies here, for example:
+    // compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
+    compile "org.openjfx:javafx-base:11:$platform"
+    compile "org.openjfx:javafx-graphics:11:$platform"
+    compile "org.openjfx:javafx-controls:11:$platform"
+    compile "org.openjfx:javafx-fxml:11:$platform"
+    compile "org.openjfx:javafx-media:11:$platform"
+    compile "org.openjfx:javafx-web:11:$platform"
 }
 
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.fxml,javafx.controls'
+        ]
+    }
+}
+
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.fxml,javafx.controls'
+        ]
+    }
+}
 
 
 /**
@@ -60,24 +71,18 @@ javafx {
  */
 apply plugin: 'com.sandec.jpro'
 
-
 /**
  * App Main Class
  */
-//mainClassName = 'com.jpro.hellojpro.HelloJPro'
 mainClassName = 'com.maze.mazeFX.View.MazeFX'
 
 /**
  * jpro settings
  */
 jpro {
-    // for debugging
-    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
-
     JVMArgs << '-Xmx1000m'
-
     //jpro server port
     port = 8080
-
 }
 
+/*** DOCKER SH*T ***/
